--- a/First.html
+++ b/First.html
@@ -1,12 +1,24 @@
-<!DOCTYPE html>
+<!-- HTML stands for Hyper Text Markup Language -->
+<!-- simple HTML5 progarm -->
+<!DOCTYPE html> <!--The <!DOCTYPE> declaration represents the document type, and helps browsers to display web pages correctly -->
 <html lang="en">
-<head>
+<head> <!-- link and meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is title</title>
+    <style>
+        h1{ /*this is internal styleling*/
+            background-color: black;
+        }
+    </style>
 </head>
-<body>
-    <h1>this is heading</h1>
-    <p>this is paragraph</p>
+<body> <!--Defines the document's body -->
+        
+    <h1>this is heading</h1> <!-- this is a element -->
+
+    <p name="paragraph">this is paragraph</p> <!-- this is tag with attribute -->
+
+    <p style="color: aqua;">Style paragraph</p> <!--this is inline style-->
+
 </body>
 </html>
